# beast-logger

./: .gitignore  DEV.md  LICENSE  README.md  pyproject.toml  requirements.txt  search.py  setup.py  start_web.sh  test_best_logger.py  test_word_split.py
beast_logger/: print_basic.py  register.py
best_display/log-display-app/: README.md  package-lock.json  package.json  tsconfig.server.json
best_display/log-display-app/src/: App.tsx  types.ts
best_display/log-display-app/src/components/: LogFileList.tsx  LogViewer.tsx
best_display/log-display-app/src/server/: server.ts
best_display/log-display-app/src/utils/: logParser.ts
best_logger/: __init__.py  apply_monkey_patch.py  print_basic.py  print_nested.py  register.py  web_launcher.py
tests/: test.md
web_display/: README.md  package-lock.json  package.json
web_display/src/: App.tsx  index.css
web_display/src/components/: EntryViewer.tsx  LogViewer.tsx  NestedEntryViewer.tsx  SimpleBadge.tsx
web_display/src/server/: server.ts
web_display/src/utils/: logParser.ts
