[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "beast-logger"
version = "0.1.0"
description = "A package for advanced logging and visualization of Python objects, especially tensors."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "qingxu.fu@alibaba-inc.com", email = "qingxu.fu@alibaba-inc.com"}
]
maintainers = [
    {name = "qingxu.fu@alibaba-inc.com", email = "qingxu.fu@alibaba-inc.com"}
]
requires-python = ">=3.7"
dependencies = [
    "loguru",
    "rich",
    "jieba"
]
keywords = ["logging", "visualization", "tensor", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/beast-logger"
"Bug Reports" = "https://github.com/beast-logger/issues"
Source = "https://github.com/beast-logger"

[project.scripts]
beast_logger_install = "web_display.start_web:main"
beast_logger_go = "web_display.start_web:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.setuptools.package-data]
"*" = [
    "web_display/**/*",
    "web_display_dist/**/*",
    "!web_display/node_modules/**/*",
    "!web_display/logs/**/*",
    "!web_display/dist/**/*",
    "!web_display/build/**/*",
    "!web_display/__pycache__/**/*",
    "!web_display/nvm/**/*"
]
